--- a/www/css/style-rts.mac.css
+++ b/www/css/style-rts.mac.css
@@ -1836,7 +1836,7 @@ article {
 
 /*= Karma controls hover tooltips =*/
 
-@media only screen and (hover: hover) {
+@media only screen and (pointer: fine) {
 	.post .karma,
 	.comment-item .karma {
 		position: relative;
