--- a/www/css/style.linux.css
+++ b/www/css/style.linux.css
@@ -1836,7 +1836,7 @@ article {
 
 /*= Karma controls hover tooltips =*/
 
-@media only screen and (hover: hover) {
+@media only screen and (pointer: fine) {
 	.post .karma,
 	.comment-item .karma {
 		position: relative;
@@ -7025,7 +7025,6 @@ div.comment-child-links a {
 .vote:active {
 	transform: none;
 }
-.vote:hover::before,
 .vote.selected::before,
 .vote.clicked-once::before,
 .vote.clicked-twice::before {
